# ai-fast-api

./: .dockerignore  .gitignore  Dockerfile  README.md  card_model.py  docker-compose.yml  ecosystem.config.js  main.py  pyproject.toml  redeploy.sh  requirements.txt
app/: config.py  db.py  main.py
app/api/: endpoints.py
app/card_analyser/: __init__.py  types.py
app/comment_analyser/: __init__.py  perspective_score.py  types.py
app/comment_analyser/bert_cased_v4/: handler.py  utils.py
app/comment_analyser/electra/: handler.py  utils.py
app/comment_analyser/electra_uncased_downsampled/: handler.py
app/comment_analyser/v1/: handler.py
app/comment_analyser/v2/: handler.py  model.py
app/comment_analyser/v3/: handler.py
app/comment_analyser/v4/: handler.py
app/image_analyser/: types.py
app/rain_predictor/: __init__.py  rainpredictor_scripted.pt  scaler.pkl  types.py
app/titanic_predictor/: __init__.py  scaler.pkl  titanic_scripted.pt  types.py
app/tweet_classifier/: __init__.py  model.py  types.py
app/tweet_classifier/tokenizer/: tokenizer_config.json
card_analyser/: __init__.py  model.py
client/: components.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.ts
client/src/: App.vue  main.ts  routes.ts  styles.css
client/src/api/: api.ts
client/src/components/: CardAnalyser.vue  Dropzone.vue  ImageAnalyser.vue  PercentageBar.vue  RainPredictor.vue  ThemeSelector.vue  TitanicPredictor.vue  ToxicCommentAnalyser.vue  TweetAnalyser.vue
client/src/composables/: useDefaultApi.ts
(+14 files in other folders)
